# amanuense

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  config.toml  config.toml.txt  whisper-dictate.service
doc/: 00-index.md  01-visao-geral.md  02-configuracao.md  03-ipc-e-estado.md  04-audio.md  05-inferencia.md  06-wayland.md  07-privacidade.md
src/: config.rs  daemon.rs  main.rs
src/daemon/: audio.rs  ipc.rs  mod.rs  model.rs  notifications.rs  runtime.rs  shutdown.rs  state_machine.rs  transcriber.rs
src/daemon/audio/: device.rs  dsp.rs  stream.rs
src/daemon/transcriber/: params.rs  postprocess.rs  segmentation.rs
src/output/: clipboard.rs  injector.rs  mod.rs
src/output/injector/: keymap.rs  memfd.rs  protocol.rs
systemd/: amanuense-restart.service  amanuense.path  amanuense.service  whisper-dictate-restart.service  whisper-dictate.path  whisper-dictate.service
