[package]
name = "amanuense"
version = "0.1.0"
edition = "2024"
description = "Daemon de ditado por voz via Whisper.cpp, zero disco, VRAM residente"

[[bin]]
name = "amanuense"
path = "src/main.rs"

[dependencies]
# --- Modelo Whisper ---
whisper-rs = { version = "0.16.0", features = ["cuda"] }

# --- Áudio e Processamento ---
cpal = "0.17.3"
rubato = "2.0.0"
ringbuf = "0.5.0"

# --- Serialização e leitura do config.toml ---
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

# --- Runtime assíncrono mínimo ---
tokio = { version = "1.52.3", features = [
    "rt", "rt-multi-thread", "net", "io-util", "sync", "macros", "signal", "time"
] }

# --- Protocolo Wayland nativo ---
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["unstable", "client"] }
wayland-protocols-misc = { version = "0.3.12", features = ["client"] }

# --- Notificações de desktop ---
notify-rust = { version = "4.17.0", default-features = false, features = ["d"] }

# --- Logging estruturado ---
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# --- CLI ---
clap = { version = "4.6.1", features = ["derive"] }

# --- Syscalls e Utils ---
dirs = "6.0.0"
libc = "0.2.186"
anyhow = "1.0.102"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
